--- a/ExpenseTracker/docker-compose.yml
+++ b/ExpenseTracker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:16
     container_name: expense-postgres
-    restart: always
+    restart: unless-stopped
     ports:
       - "5433:5432"
     environment:
