--- a/ExpenseTracker/src/main/resources/application.properties
+++ b/ExpenseTracker/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-DB_URL=jdbc:postgresql://localhost:5433/expense_db
+DB_URL=jdbc:postgresql://localhost:5433/expense-db
 DB_USER=expense
 DB_PASSWORD=expense
