--- a/ExpenseTracker/pom.xml
+++ b/ExpenseTracker/pom.xml
@@ -29,10 +29,18 @@
             <version>1.19.7</version>
             <scope>test</scope>
         </dependency>
+        <!-- SLF4J API -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <artifactId>slf4j-api</artifactId>
             <version>2.0.13</version>
+        </dependency>
+
+        <!-- Logback implementation -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
