--- a/ExpenseTracker/pom.xml
+++ b/ExpenseTracker/pom.xml
@@ -116,6 +116,34 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--            SPOTBUGS SECTION-->
+            <!--            <plugin>-->
+            <!--                <groupId>com.github.spotbugs</groupId>-->
+            <!--                <artifactId>spotbugs-maven-plugin</artifactId>-->
+            <!--                <version>4.9.8.0</version>-->
+            <!--                <configuration>-->
+            <!--                    &lt;!&ndash;                    <includeFilterFile>spotbugs-security-include.xml</includeFilterFile>&ndash;&gt;-->
+            <!--                    <excludeFilterFile>-->
+            <!--                        config/spotbugs/spotbugs-security-exclude.xml-->
+            <!--                    </excludeFilterFile>-->
+            <!--                    <plugins>-->
+            <!--                        <plugin>-->
+            <!--                            <groupId>com.h3xstream.findsecbugs</groupId>-->
+            <!--                            <artifactId>findsecbugs-plugin</artifactId>-->
+            <!--                            <version>1.12.0</version>-->
+            <!--                        </plugin>-->
+            <!--                    </plugins>-->
+            <!--                </configuration>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <phase>verify</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>check</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
+            <!--            FLYWAY SECTION-->
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
