wip: Authentication Stateless JWT

--- a/spring-expense-tracker/src/main/resources/application.yml
+++ b/spring-expense-tracker/src/main/resources/application.yml
@@ -17,5 +17,10 @@ spring:
       hibernate:
         format_sql: true
 
+  jwt:
+    secret: gUcF4TnCI8FyUWq3RG9mObMGcjqxDlV5N+Eje0u8r9U=
+    access-token-expiry: 900000
+    refresh-token-expiry: 604800000  # 7 days
+
   flyway:
     enabled: true
