--- a/spring-expense-tracker/pom.xml
+++ b/spring-expense-tracker/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
         <!-- Validation (Jakarta) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
