--- a/spring-expense-tracker/src/main/resources/application.yml
+++ b/spring-expense-tracker/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: spring-expense-tracker
 
   datasource:
-    url: jdbc:postgresql://localhost:5433/expense
+    url: jdbc:postgresql://127.0.0.1:5433/expense
     username: expense
     password: password
     driver-class-name: org.postgresql.Driver
